refactor search query
