# docs/swagger.json
@@ -43,6 +43,18 @@
                         "description": "Number of movies per page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by movie title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by movie release year",
+                        "name": "year",
+                        "in": "query"
                     }
                 ],
                 "responses": {
